--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,12 @@
 {
+      "background": {
+         "scripts": [ "js/popup.js" ],
+         "persistent": false
+      },
+  "options_page": "popup.html",
   "name": "CurryReacts For Facebook",
   "short_name": "CurryReactsForFB",
-  "version": "1.0",
+  "version": "2.0",
   "manifest_version": 2,
   "description": "Facebook recently released a new emoji reaction. This extension replaces them with Stephen Curry's face.",
   "homepage_url": "http://virenmohindra.me/",
@@ -9,7 +14,8 @@
   "icons": {
     "16": "icons/icon1.png",
     "48": "icons/icon2.png",
-    "128": "icons/icon3.png"
+    "128": "icons/icon3.png",
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
   },
   "permissions": [
     "*://*.facebook.com/*"
