--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,12 @@
   "options_page": "popup.html",
   "name": "CurryReacts For Facebook",
   "short_name": "CurryReactsForFB",
-  "version": "2.0",
+  "version": "2.5",
   "manifest_version": 2,
   "description": "Facebook recently released a new emoji reaction. This extension replaces them with Stephen Curry's face.",
   "homepage_url": "http://virenmohindra.me/",
   "default_locale": "en",
-  "icons": {
-    "16": "icons/icon1.png",
-    "48": "icons/icon2.png",
-    "128": "icons/icon3.png",
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
-  },
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "permissions": [
     "*://*.facebook.com/*"
   ],
@@ -32,5 +27,10 @@
   ],
   "web_accessible_resources": [
     "icons/*.png"
-  ]
+  ],
+  "icons": {
+    "16": "icons/icon1.png",
+    "48": "icons/icon2.png",
+    "128": "icons/icon3.png"
+   }
 }
